// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions getUserOrders 1`] = `
Array [
  Object {
    "type": "userOrderList",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
]
`;

exports[`actions getUserOrders 2`] = `
Array [
  Array [
    "0xAccount",
    -1357432110,
    1234567890,
    "pair",
  ],
]
`;

exports[`actions getUserOrders dummy addr 1`] = `Array []`;

exports[`actions getUserOrders dummy addr 2`] = `Array []`;

exports[`actions orderBookSnapshotUpdate 1`] = `
Object {
  "type": "orderBookSnapshot",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderBookSubscriptionUpdate 1`] = `
Object {
  "type": "orderBookSubscription",
  "value": "pair",
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBookUpdate",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "type": "orderBookSubscription",
    "value": "",
  },
  Object {
    "type": "userOrderSubscription",
    "value": 0,
  },
  Object {
    "type": "orderBookSubscription",
    "value": "pair",
  },
  Object {
    "type": "userOrderSubscription",
    "value": 123,
  },
  Object {
    "type": "userOrderList",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
]
`;

exports[`actions subscribe 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`actions subscribe 3`] = `
Array [
  Array [
    "0xAccount",
    -1357432110,
    1234567890,
    "pair",
  ],
]
`;

exports[`actions userOrder 1`] = `
Object {
  "type": "updateOrder",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions userOrderListUpdate 1`] = `
Object {
  "type": "userOrderList",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;

exports[`actions userOrderSubscriptionUpdate 1`] = `
Object {
  "type": "userOrderSubscription",
  "value": 123,
}
`;
